# CPM.cmake

examples/catch2/: CMakeLists.txt
